# controllers/ente.go
@@ -5,11 +5,8 @@ import (
 	"strconv"
 	"strings"
 
-	"github.com/fatih/structs"
-	"github.com/planesticud/ente_crud/models"
-	"github.com/udistrital/utils_oas/formatdata"
-
 	"github.com/astaxie/beego"
+	"github.com/planesticud/ente_crud/models"
 )
 
 // EnteController operations for Ente
@@ -31,23 +28,25 @@ func (c *EnteController) URLMapping() {
 // @Description create Ente
 // @Param	body		body 	models.Ente	true		"body for Ente content"
 // @Success 201 {int} models.Ente
-// @Failure 403 body is empty
+// @Failure 400 the request contains incorrect syntax
 // @router / [post]
 func (c *EnteController) Post() {
 	var v models.Ente
 	if err := json.Unmarshal(c.Ctx.Input.RequestBody, &v); err == nil {
 		if _, err := models.AddEnte(&v); err == nil {
 			c.Ctx.Output.SetStatus(201)
-			c.Data["json"] = models.Alert{Type: "success", Code: "S_201", Body: v}
+			c.Data["json"] = v
 		} else {
-			alertdb := structs.Map(err)
-			var code string
-			formatdata.FillStruct(alertdb["Code"], &code)
-			alert := models.Alert{Type: "error", Code: "E_" + code, Body: err.Error()}
-			c.Data["json"] = alert
+			beego.Error(err)
+			//c.Data["development"] = map[string]interface{}{"Code": "400", "Body": err.Error(), "Type": "error"}
+			c.Data["system"] = err
+			c.Abort("400")
 		}
 	} else {
-		c.Data["json"] = models.Alert{Type: "error", Code: "E_400", Body: err.Error()}
+		beego.Error(err)
+		//c.Data["development"] = map[string]interface{}{"Code": "400", "Body": err.Error(), "Type": "error"}
+		c.Data["system"] = err
+		c.Abort("400")
 	}
 	c.ServeJSON()
 }
@@ -57,14 +56,17 @@ func (c *EnteController) Post() {
 // @Description get Ente by id
 // @Param	id		path 	string	true		"The key for staticblock"
 // @Success 200 {object} models.Ente
-// @Failure 403 :id is empty
+// @Failure 404 not found resource
 // @router /:id [get]
 func (c *EnteController) GetOne() {
 	idStr := c.Ctx.Input.Param(":id")
 	id, _ := strconv.Atoi(idStr)
 	v, err := models.GetEnteById(id)
 	if err != nil {
-		c.Data["json"] = models.Alert{Type: "error", Code: "E_400", Body: err.Error()}
+		beego.Error(err)
+		//c.Data["development"] = map[string]interface{}{"Code": "404", "Body": err.Error(), "Type": "error"}
+		c.Data["system"] = err
+		c.Abort("404")
 	} else {
 		c.Data["json"] = v
 	}
@@ -81,7 +83,7 @@ func (c *EnteController) GetOne() {
 // @Param	limit	query	string	false	"Limit the size of result set. Must be an integer"
 // @Param	offset	query	string	false	"Start position of result set. Must be an integer"
 // @Success 200 {object} models.Ente
-// @Failure 403
+// @Failure 404 not found resource
 // @router / [get]
 func (c *EnteController) GetAll() {
 	var fields []string
@@ -127,8 +129,14 @@ func (c *EnteController) GetAll() {
 
 	l, err := models.GetAllEnte(query, fields, sortby, order, offset, limit)
 	if err != nil {
-		c.Data["json"] = models.Alert{Type: "error", Code: "E_400", Body: err.Error()}
+		beego.Error(err)
+		//c.Data["development"] = map[string]interface{}{"Code": "404", "Body": err.Error(), "Type": "error"}
+		c.Data["system"] = err
+		c.Abort("404")
 	} else {
+		if l == nil {
+			l = append(l, map[string]interface{}{})
+		}
 		c.Data["json"] = l
 	}
 	c.ServeJSON()
@@ -140,7 +148,7 @@ func (c *EnteController) GetAll() {
 // @Param	id		path 	string	true		"The id you want to update"
 // @Param	body		body 	models.Ente	true		"body for Ente content"
 // @Success 200 {object} models.Ente
-// @Failure 403 :id is not int
+// @Failure 400 the request contains incorrect syntax
 // @router /:id [put]
 func (c *EnteController) Put() {
 	idStr := c.Ctx.Input.Param(":id")
@@ -149,16 +157,18 @@ func (c *EnteController) Put() {
 	if err := json.Unmarshal(c.Ctx.Input.RequestBody, &v); err == nil {
 		if err := models.UpdateEnteById(&v); err == nil {
 			c.Ctx.Output.SetStatus(200)
-			c.Data["json"] = models.Alert{Type: "success", Code: "S_200", Body: v}
+			c.Data["json"] = v
 		} else {
-			alertdb := structs.Map(err)
-			var code string
-			formatdata.FillStruct(alertdb["Code"], &code)
-			alert := models.Alert{Type: "error", Code: "E_" + code, Body: err.Error()}
-			c.Data["json"] = alert
+			beego.Error(err)
+			//c.Data["development"] = map[string]interface{}{"Code": "400", "Body": err.Error(), "Type": "error"}
+			c.Data["System"] = err
+			c.Abort("400")
 		}
 	} else {
-		c.Data["json"] = models.Alert{Type: "error", Code: "E_400", Body: err.Error()}
+		beego.Error(err)
+		//c.Data["development"] = map[string]interface{}{"Code": "400", "Body": err.Error(), "Type": "error"}
+		c.Data["System"] = err
+		c.Abort("400")
 	}
 	c.ServeJSON()
 }
@@ -168,15 +178,18 @@ func (c *EnteController) Put() {
 // @Description delete the Ente
 // @Param	id		path 	string	true		"The id you want to delete"
 // @Success 200 {string} delete success!
-// @Failure 403 id is empty
+// @Failure 404 not found resource
 // @router /:id [delete]
 func (c *EnteController) Delete() {
 	idStr := c.Ctx.Input.Param(":id")
 	id, _ := strconv.Atoi(idStr)
 	if err := models.DeleteEnte(id); err == nil {
-		c.Data["json"] = models.Alert{Type: "success", Code: "S_200", Body: "OK"}
+		c.Data["json"] = map[string]interface{}{"Id": id}
 	} else {
-		c.Data["json"] = models.Alert{Type: "error", Code: "E_400", Body: err.Error()}
+		beego.Error(err)
+		//c.Data["development"] = map[string]interface{}{"Code": "404", "Body": err.Error(), "Type": "error"}
+		c.Data["System"] = err
+		c.Abort("404")
 	}
 	c.ServeJSON()
 }
